Feat: Create session/registration controllers for user login/signup

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -5,7 +5,7 @@
 // $pretty--color-default: $black;
 
 $black: #29363c;
-$primary: #EC1B23;
+$primary: #000;
 $success: #50ec90;
 $danger: #c90101;
 $gray: #f6f7fa;
