--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,1 +1,28 @@
-<%= render "new"%>
+<div class="row justify-content-center no-gutters min-height-inherit">
+  <div class="col-12 col-sm-6 border-0 bg-white mt-5 px-5">
+    <center>
+      <h6 class="mt-3 mb-5 font-weight-normal">Create an account</h6>
+    </center>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+      <div class="form-inputs">
+        <div class="row mb-1">
+          <div class="col-12">
+            <%= f.input :email, required: true, input_html: { class: "mb-2" } %>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="col-12">
+            <%= f.input :password, required: true, input_html: { minlength: 8, class: "mb-2" }%>
+          </div>
+          <div class="col-12">
+            <%= f.input :password_confirmation, required: true, input_html: { class: "mb-2" } %>
+          </div>
+        </div>
+      </div>
+      <div class="form-actions d-flex justify-content-center">
+        <%= f.button :submit, "Sign Up", :class=>"btn btn-dark" %>
+      </div>
+    <% end %>
+  </div>
+</div>
