Feat: Create new/edit view for notes

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -16,7 +16,7 @@
           <th> Title </th>
           <th> </th>
           <th> Body </th>
-          <th></th>
+          <th class="no-sort"></th>
         </tr>
       </thead>
       <tbody>
