Feat: Create note show view page

--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -11,7 +11,7 @@
             <%= f.input :title, required: true %>
           </div>
           <div class="col-12 mb-3">
-            <%= f.input :body, required: true %>
+            <%= f.input :body, required: true, input_html: {style: "min-height: 250px" } %>
           </div>
         </div>
       </div>
