--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -2,7 +2,10 @@
   <div class="row mb-4 px-3 align-items-center">
     <div class="col-12 d-flex justify-content-between">
       <h4>Note #<%= @note.id %></h4>
-      <%= button_to "Edit", edit_note_path(@note), class: "btn btn-dark", method: "get" %>
+      <div class="d-flex">
+        <%= button_to "Edit", edit_note_path(@note), class: "btn btn-dark mr-2", method: "get" %>
+        <%= link_to "Delete", note_path(@note), method: :delete, :data => {:confirm => "Are you sure you want to delete this note?"}, class: "btn btn-danger" %>
+      </div>
     </div>
     <div class="col-12 mt-4">
       <h5><%= @note.title %></h5>
