--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
       <!-- /.navbar-collapse -->
     </nav>
     <div id="page-content">
+      <%= render 'layouts/partials/alert' %>
       <%= yield %>
     </div>
   </body>
