--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -23,3 +23,13 @@
     </table>
   </div>
 </div>
+<div class="modal fade" id="editModal" role="dialog" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-lg">
+    <!-- Modal content-->
+    <div class="modal-content p-5" style="border-width: 0;">
+    </div>
+  </div>
+</div>
+<script>
+  var current_user_email = "<%= current_user.email %>"
+</script>
