--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,17 +1,72 @@
 <div class="m-5">
   <div class="row mb-4 px-3 align-items-center">
+    <div class="col-12 mb-4 d-none" id="div-offline">
+      <h6 class="text-danger text-center">You are currently offline</h6>
+    </div>
     <div class="col-12 d-flex justify-content-between">
       <h4>Note #<%= @note.id %></h4>
       <div class="d-flex">
-        <%= button_to "Edit", edit_note_path(@note), class: "btn btn-dark mr-2", method: "get" %>
-        <%= link_to "Delete", note_path(@note), method: :delete, :data => {:confirm => "Are you sure you want to delete this note?"}, class: "btn btn-danger" %>
+        <% if @note.user_id == current_user.id %>
+          <%= link_to "Delete", note_path(@note), method: :delete, :data => {:confirm => "Are you sure you want to delete this note?"}, class: "btn btn-danger" %>
+        <%end%>
       </div>
     </div>
-    <div class="col-12 mt-4">
-      <input type="text" class="note_title<%= @note.id %>" value="<%= @note.title %>">
+    <div class="col-12 mt-2">
+      <label>Currently collaborating:</label>
+      <ul id="collaborators">
+        <% @note.note_collaborators.active.where("email != ?", current_user.email).each do |nc| %>
+          <li data-email="<%= nc.email %>"><%= nc.email %></li>
+        <%end%>
+      </ul>
     </div>
-    <div class="col-12 mt-3">
-      <span class="note_body<%= @note.id %>" style="white-space: pre-line;"><%= @note.body %></span>
+    <div class="col-12 mt-4">
+      <%if @edit %>
+        <input type="text" id="note_title<%= @note.id %>" class="note_title note_title<%= @note.id %> w-100 p-2" value="<%= @note.title %>" name="note[title]">
+      <%else%>
+        <span type="text" class="note_title<%= @note.id %> w-100 font-weight-bold"><%= @note.title %></span>
+      <%end%>
+    </div>
+    <div class="col-12 mt-4">
+      <%if @edit %>
+        <textarea id="note_body<%= @note.id %>" class="note_body note_body<%= @note.id %> w-100 p-2" name="note[body]" style="min-height: 200px;"><%= @note.body %></textarea>
+      <%else%>
+        <span type="text" class="note_body note_body<%= @note.id %> w-100"><%= @note.body %></span>
+      <%end%>
     </div>
   </div>
 </div>
+<script>
+  var current_user_email = "<%= current_user.email %>"
+  
+  var typingTimer;
+  var doneTypingInterval = 1000
+  
+  $(".note_title, .note_body").keyup(function() {
+    clearTimeout(typingTimer);
+    typingTimer = setTimeout(updateNote, doneTypingInterval);
+  })
+  
+  $(".note_title, .note_body").keydown(function() {
+    clearTimeout(typingTimer);
+  })
+  
+  function updateNote() {
+    $.ajax({
+      type: "PUT",
+      url: "/notes/<%= @note.id %>",
+      dataType: "json",
+      data: {
+        note: {
+          title: $("#note_title<%= @note.id %>").val(),
+          body: $("#note_body<%= @note.id %>").val()
+        }
+      },
+      success: function(data) {
+  
+      },
+      error: function(request, err, status) {
+  
+      }
+    })
+  }
+</script>
